updated all navigation

--- a/about/about.html
+++ b/about/about.html
@@ -47,10 +47,11 @@
 <body>
 
   <div class="box">
+    <a href="../index.html"><div class="navIconCover"><img src="../partials/images/logo-white.png" style="height:50%;width:auto"> </div></a>
     <div class="close lavender navClose" style="color:white">
         <i class="fa fa-close close-icon"></i>
     </div>
-    <a href="../design/design.html"><div class="navCoverItem"  style="margin-top:80px"> Design </div></a>
+    <a href="../design/design.html"><div class="navCoverItem"  style="margin-top:60px"> Design </div></a>
     <a href="../code/code.html"><div class="navCoverItem"> Code </div></a>
     <a href="../prototyping/prototyping.html"><div class="navCoverItem"> Prototyping </div>
     <a href="../about/about.html"><div class="navCoverItem"> About </div>
