--- a/code/code.html
+++ b/code/code.html
@@ -36,10 +36,11 @@
 </head>
 
 <div class="box">
+  <a href="../index.html"><div class="navIconCover"><img src="../partials/images/logo-white.png" style="height:50%;width:auto"> </div></a>
   <div class="close lavender navClose" style="color:white">
       <i class="fa fa-close close-icon"></i>
   </div>
-  <a href="../design/design.html"><div class="navCoverItem"  style="margin-top:80px"> Design </div></a>
+  <a href="../design/design.html"><div class="navCoverItem"  style="margin-top:60px"> Design </div></a>
   <a href="../code/code.html"><div class="navCoverItem"> Code </div></a>
   <a href="../prototyping/prototyping.html"><div class="navCoverItem"> Prototyping </div>
   <a href="../about/about.html"><div class="navCoverItem"> About </div>
@@ -97,7 +98,7 @@
     machine learning <br>webapps, and branded web development.
     </h4>
         <a href="content/stubhub.html" class="transition">
-        <div class="preview">
+        <div class="preview" style="background-color:#75c5be">
             <div class="preview-layover">
                 StubHub Community
             </div>
@@ -114,7 +115,7 @@
             </div>
         </a>
         <a href="content/feaster.html" class="transition">
-          <div class="preview bottom" style="background-color:#edb7bf">
+          <div class="preview bottom overrideBottom" style="background-color:#edb7bf">
               <div class="preview-layover">
                   Feaster Landing Page
               </div>
@@ -122,7 +123,7 @@
           </div>
         </a>
         <a href="content/weatherornot.html" class="transition">
-          <div class="preview bottom">
+          <div class="preview bottom" style="background-color:#b1e1e9">
               <div class="preview-layover">
                   WeatherOrNot
               </div>
