--- a/code/content/stubhub.html
+++ b/code/content/stubhub.html
@@ -34,11 +34,17 @@
 
 </head>
 
-
-<div class="container">
-    <a href="../code.html"class="close lavender" style="color:white">
+<div class="header">
+    <div class="header-continer">
+      <a href="../index.html"><div class="navIcon"> <img src="../../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+    </div>
+    <a href="../code.html"class="close secClose" style="color:#dab">
         <i class="fa fa-close close-icon"></i>
     </a>
+</div>
+
+
+<div class="container">
     <h1 class="section-title"> StubHub Community</h1>
     <h4 class="section-subtitle sub"> As an <a href="https://www.ebay.com/" target="_blank">eBay</a> intern during Summer 2017, I worked as a part
       of StubHub's Search Infrastructure engineering team. In addition to contributing towards
