--- a/design/content/calhacks.html
+++ b/design/content/calhacks.html
@@ -34,10 +34,16 @@
 
 </head>
 
-<div class="container">
-    <a href="../design.html"class="close lavender" style="color:white">
+<div class="header">
+    <div class="header-continer">
+      <a href="../index.html"><div class="navIcon"> <img src="../../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+    </div>
+    <a href="../design.html"class="close secClose" style="color:#dab">
         <i class="fa fa-close close-icon"></i>
     </a>
+</div>
+
+<div class="container">
     <h1 class="section-title"> Cal Hacks 4.0</h1>
     <h4 class="section-subtitle sub"> I'm a director at <a href="https://calhacks.io/" target="_blank">Cal Hacks</a>, the
       largest hackathon in the world! One of my main roles is as graphic
