--- a/design/content/calhacksbrand.html
+++ b/design/content/calhacksbrand.html
@@ -34,24 +34,45 @@
 
 </head>
 
-
-<div class="container">
-    <a href="../design.html"class="close lavender" style="color:white">
+<div class="header">
+    <div class="header-continer">
+      <a href="../index.html"><div class="navIcon"> <img src="../../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+    </div>
+    <a href="../design.html"class="close secClose" style="color:#dab">
         <i class="fa fa-close close-icon"></i>
     </a>
+</div>
+
+
+<div class="container">
+
     <h1 class="section-title"> Cal Hacks Branding</h1>
     <h4 class="section-subtitle sub"> I'm a director at <a href="https://calhacks.io/" target="_blank">Cal Hacks</a>, the
       largest hackathon in the world! One of my main roles is as graphic
-      designer &mdash; logos, branding, marketing, you name it. Over the
-      past year, I created the branding for Cal Hacks 4.0 under the general
-      guidance of a California road trip theme to celebrate the fact that
-      advanced and beginner hackers alike come to California from all over the world to hack with us in Berkeley.
+      designer &mdash; logos, branding, marketing, you name it. One of the signatures of Cal Hacks is a little bear logo
+      named dd0ski that changes which each iteration of the hackathon. However, we wanted to create a permanent logo that
+      always stays with the organization despite our hackathon's annually iterating logo. As such, I created a permanent
+      brand for Cal Hacks by building UC Berkeley's iconic Campanile out of circuit board hardware.
     </h4>
-        <div class="full-image"><img src="../../partials/images/design/chroadtrip.png"></div>
+        <div class="full-image"><img src="../../partials/images/design/chbrand.png"></div>
         <div class="content-text">
-            Every iteration of Cal Hacks gets dressed in a new bear named <a>dd0ski</a> that represents UC Berkeley's mascot Oski.
-            I designed the Cal Hacks 4.0 dd0ski &mdash; this little guy was featured on thousands of shirts, swag bags, badges,
-            wristbands, and more!
+            As shown above, I created differnt iterations of the logo to be used depending on the context &mdash; some details
+            are taken out as the logo scales down.
+            <br></br>
+            So far, the branding has been used for our Spring 2018 Director Recuritment as well as efforts to spread our new image through
+            apparel, stickers, and more. Below are some images of the branding in action!
         </div>
+        <div class="half-image iphone flyer forceWidthAutoHeight"><img src="../../partials/images/design/calhacksbrand/recruitFront.png" ></div>
+        <div class="half-image iphone flyer forceWidthAutoHeight"><img src="../../partials/images/design/calhacksbrand/recruitBack.png"></div>
+        <div class="half-image iphone"><img src="../../partials/images/design/calhacksbrand/sweat.png"></div>
+        <div class="half-image iphone"><img src="../../partials/images/design/calhacksbrand/camp.png"></div>
+        <div class="back-button">
+          <a href="../design.html" class="back-hover">
+            <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
+            <br>
+            <div class="eighteen">back to design</div>
+          </a>
+        </div>
+
 
 </div>
