--- a/design/content/innod.html
+++ b/design/content/innod.html
@@ -35,10 +35,18 @@
 </head>
 
 <body>
+
+  <div class="header">
+      <div class="header-continer">
+        <a href="../index.html"><div class="navIcon"> <img src="../../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+      </div>
+      <a href="../design.html"class="close secClose" style="color:#dab">
+          <i class="fa fa-close close-icon"></i>
+      </a>
+  </div>
+
   <div class="container">
-    <a href="../design.html"class="close lavender" style="color:white">
-        <i class="fa fa-close close-icon"></i>
-    </a>
+
       <h1 class="section-title"> Marketing Tier - Innovative Design </h1>
       <h4 class="section-subtitle sub"> <a href="https://innovativedesign.club/" target="_blank">Innovative Design</a> is Berkeley's premier student-run creative agency that
         does graphic design work, photography, web development, and more for a wide array of both campus
