--- a/design/content/sushi.html
+++ b/design/content/sushi.html
@@ -35,10 +35,17 @@
 </head>
 
 <body>
-  <div class="container">
-      <a href="../design.html"class="close lavender" style="color:white">
+  <div class="header">
+      <div class="header-continer">
+        <a href="../index.html"><div class="navIcon"> <img src="../../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+      </div>
+      <a href="../design.html"class="close secClose" style="color:#dab">
           <i class="fa fa-close close-icon"></i>
       </a>
+  </div>
+
+  <div class="container">
+
       <h1 class="section-title"> Sushi Series</h1>
       <h4 class="section-subtitle sub"> I'd never say no to sushi, especially when it
         comes to tempura. I'm working on a series of sushi illustrations made exclusively
