--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
 </head>
 
 <div class="box">
+  <a href="../index.html"><div class="navIconCover"><img src="partials/images/logo-white.png" style="height:50%;width:auto"> </div></a>
   <div class="close lavender navClose" style="color:white">
       <i class="fa fa-close close-icon"></i>
   </div>
-  <a href="../design/design.html"><div class="navCoverItem"  style="margin-top:80px"> Design </div></a>
-  <a href="../code/code.html"><div class="navCoverItem"> Code </div></a>
-  <a href="../prototyping/prototyping.html"><div class="navCoverItem"> Prototyping </div>
-  <a href="../about/about.html"><div class="navCoverItem"> About </div>
+  <a href="design/design.html"><div class="navCoverItem"  style="margin-top:60px"> Design </div></a>
+  <a href="code/code.html"><div class="navCoverItem"> Code </div></a>
+  <a href="prototyping/prototyping.html"><div class="navCoverItem"> Prototyping </div>
+  <a href="about/about.html"><div class="navCoverItem"> About </div>
   <div class="linker-wrap linkerWrapHome">
       <a href="https://github.com/adrianababakanian" target="_blank">
         <div class="linker whiteBack">
@@ -80,9 +81,9 @@
   <div class="fader"></div>
   <div class="header homeHeader">
     <div class="header-container">
-      <a href="index.html" class="stayPres"><div class="navIcon"> <img src="partials/images/logo2.png" style="height:50%;width:auto"> </div>
-      <a href="about/about.html"><div class="navItem navItemAlt" style="padding-right:0"> About </div>
-      <a href="prototyping/prototyping.html"><div class="navItem navItemAlt"> Prototyping </div>
+      <a href="index.html" class="stayPres"><div class="navIcon"> <img src="partials/images/logo2.png" style="height:50%;width:auto"> </div> </a>
+      <a href="about/about.html"><div class="navItem navItemAlt" style="padding-right:0"> About </div> </a>
+      <a href="prototyping/prototyping.html"><div class="navItem navItemAlt"> Prototyping </div> </a>
       <a href="code/code.html"><div class="navItem navItemAlt"> Code </div></a>
       <a href="design/design.html"><div class="navItem navItemAlt"> Design </div></a>
     </div>
