--- a/prototyping/content/drawing.html
+++ b/prototyping/content/drawing.html
@@ -34,10 +34,16 @@
 
 </head>
 
-<div class="container">
-    <a href="../prototyping.html"class="close lavender" style="color:white">
+<div class="header">
+    <div class="header-continer">
+      <a href="../index.html"><div class="navIcon"> <img src="../../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+    </div>
+    <a href="../prototyping.html"class="close secClose" style="color:#dab">
         <i class="fa fa-close close-icon"></i>
     </a>
+</div>
+
+<div class="container">
     <h1 class="section-title"> Circumferential Drawing Machine </h1>
     <h4 class="section-subtitle sub"> I made this drawing machine as an extension of a simple rack-and-gear prototype I made to practice
       designing and piecing together gears from Illustrator files. I ended up laser cutting a small pen holder and attaching the prototype
