--- a/prototyping/content/kirigami.html
+++ b/prototyping/content/kirigami.html
@@ -34,10 +34,16 @@
 
 </head>
 
-<div class="container">
-    <a href="../prototyping.html"class="close lavender" style="color:white">
+<div class="header">
+    <div class="header-continer">
+      <a href="../index.html"><div class="navIcon"> <img src="../../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+    </div>
+    <a href="../prototyping.html"class="close secClose" style="color:#dab">
         <i class="fa fa-close close-icon"></i>
     </a>
+</div>
+
+<div class="container">
     <h1 class="section-title"> Breathing Kirigami </h1>
     <h4 class="section-subtitle sub"> The artform of <a href="https://en.wikipedia.org/wiki/Kirigami" target="_blank">kirigami</a> is a variation of the traditional origami that
       allows cuts of the paper, as opposed to only folds. In this project, I intertwined the natural simplicity of kirigami with the electronics of a microcontoller using only fine
