--- a/prototyping/content/mo.html
+++ b/prototyping/content/mo.html
@@ -34,11 +34,17 @@
 
 </head>
 
-
-<div class="container">
-    <a href="../prototyping.html"class="close lavender" style="color:white">
+<div class="header">
+    <div class="header-continer">
+      <a href="../index.html"><div class="navIcon"> <img src="../../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+    </div>
+    <a href="../prototyping.html"class="close secClose" style="color:#dab">
         <i class="fa fa-close close-icon"></i>
     </a>
+</div>
+
+
+<div class="container">
     <h1 class="section-title"> Mo - An Agile Tread Robot </h1>
     <h4 class="section-subtitle sub"> As both an engineer and a designer, prototyping is for me one of the
       most rewarding forms of art. In spring 2017, I took a class at UC Berkeley's <a href="http://jacobsinstitute.berkeley.edu/our-space/" target="_blank">Jacobs Institute for Design Innovation</a> on
