--- a/prototyping/prototyping.html
+++ b/prototyping/prototyping.html
@@ -36,10 +36,11 @@
 <body>
 
   <div class="box">
+    <a href="../index.html"><div class="navIconCover"><img src="../partials/images/logo-white.png" style="height:50%;width:auto"> </div></a>
     <div class="close lavender navClose" style="color:white">
         <i class="fa fa-close close-icon"></i>
     </div>
-    <a href="../design/design.html"><div class="navCoverItem"  style="margin-top:80px"> Design </div></a>
+    <a href="../design/design.html"><div class="navCoverItem"  style="margin-top:60px"> Design </div></a>
     <a href="../code/code.html"><div class="navCoverItem"> Code </div></a>
     <a href="../prototyping/prototyping.html"><div class="navCoverItem"> Prototyping </div>
     <a href="../about/about.html"><div class="navCoverItem"> About </div>
@@ -95,7 +96,7 @@
       <h4 class="section-subtitle"> Some visual manifestations of my passions for both engineering and art in the form of
             bluetooth-controlled robots, drawing machines, geared ponds, and more. </h4>
           <a href="content/mo.html" class="transition">
-              <div class="preview" style="background-color:#ddaabb">
+              <div class="preview" style="background-color:">
                   <div class="preview-layover">
                       Mo: an agile tread robot
                   </div>
@@ -103,7 +104,7 @@
               </div>
           </a>
           <a href="content/pond.html" class="transition">
-              <div class="preview" style="background-color:#d7d6ec">
+              <div class="preview" style="background-color:">
                   <div class="preview-layover">
                       Pond in geared motion
                   </div>
@@ -111,7 +112,7 @@
               </div>
           </a>
           <a href="content/kirigami.html" class="transition">
-              <div class="preview bottom" style="background-color:#c5d3ec">
+              <div class="preview bottom overrideBottom" style="background-color:">
                   <div class="preview-layover">
                       Breathing kirigami
                   </div>
@@ -119,7 +120,7 @@
               </div>
           </a>
           <a href="content/drawing.html" class="transition">
-              <div class="preview bottom" style="background-color:#efa3a3">
+              <div class="preview bottom" style="background-color:">
                   <div class="preview-layover">
                       Drawing machine
                   </div>
