--- a/code/content/personalsite.html
+++ b/code/content/personalsite.html
@@ -33,10 +33,16 @@
   <script src="../../js/app.js"></script>
 </head>
 
-<div class="container">
-    <a href="../code.html"class="close lavender" style="color:white">
+<div class="header">
+    <div class="header-continer">
+      <a href="../index.html"><div class="navIcon"> <img src="../../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+    </div>
+    <a href="../code.html"class="close secClose" style="color:#dab">
         <i class="fa fa-close close-icon"></i>
     </a>
+</div>
+
+<div class="container">
     <h1 class="section-title"> Personal Portfolio Rebuild</h1>
     <h4 class="section-subtitle sub"> I built the previous iteration of my personal site
       up from sratch when I was just becoming familiar with web development. Although
