--- a/design/content/berkeleymap.html
+++ b/design/content/berkeleymap.html
@@ -34,10 +34,17 @@
 </head>
 
 <body>
+
+  <div class="header">
+      <div class="header-continer">
+        <a href="../index.html"><div class="navIcon"> <img src="../../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+      </div>
+      <a href="../design.html"class="close secClose" style="color:#dab">
+          <i class="fa fa-close close-icon"></i>
+      </a>
+  </div>
+
   <div class="container">
-    <a href="../design.html"class="close lavender" style="color:white">
-        <i class="fa fa-close close-icon"></i>
-    </a>
       <h1 class="section-title"> Map of Berkeley </h1>
       <h4 class="section-subtitle sub"> One of my favorite things about the Berkeley campus is the
         diversity in architectural style. Roman triumphal arches stand amidst not just Corinthian
