--- a/design/content/cubcon.html
+++ b/design/content/cubcon.html
@@ -35,10 +35,16 @@
 </head>
 
 <body>
-  <div class="container">
-      <a href="../design.html"class="close lavender" style="color:white">
+  <div class="header">
+      <div class="header-continer">
+        <a href="../index.html"><div class="navIcon"> <img src="../../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+      </div>
+      <a href="../design.html"class="close secClose" style="color:#dab">
           <i class="fa fa-close close-icon"></i>
       </a>
+  </div>
+
+  <div class="container">
       <h1 class="section-title"> CubCon</h1>
       <h4 class="section-subtitle sub"> One of our goals at Cal Hacks is to make hacker culture
         accessible to anyone who wants to be a part of it, regardless of level of expertise in
