--- a/design/content/doodles.html
+++ b/design/content/doodles.html
@@ -35,10 +35,17 @@
 </head>
 
 <body>
-  <div class="container">
-      <a href="../design.html"class="close lavender" style="color:white">
+
+  <div class="header">
+      <div class="header-continer">
+        <a href="../index.html"><div class="navIcon"> <img src="../../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+      </div>
+      <a href="../design.html"class="close secClose" style="color:#dab">
           <i class="fa fa-close close-icon"></i>
       </a>
+  </div>
+
+  <div class="container">
       <h1 class="section-title"> Doodles</h1>
       <h4 class="section-subtitle sub"> Having worked as a designer for many different companies,
         clubs, and startups, it's always a refreshing break to doodle something up with no prompt
