--- a/design/content/feaster.html
+++ b/design/content/feaster.html
@@ -35,10 +35,18 @@
 </head>
 
 <body>
-  <div class="container">
-      <a href="../design.html"class="close lavender" style="color:white">
+
+  <div class="header">
+      <div class="header-continer">
+        <a href="../index.html"><div class="navIcon"> <img src="../../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+      </div>
+      <a href="../design.html"class="close secClose" style="color:#dab">
           <i class="fa fa-close close-icon"></i>
       </a>
+  </div>
+
+  <div class="container">
+
       <h1 class="section-title"> Feaster</h1>
       <h4 class="section-subtitle sub"> In May of 2016, I began working with <a href="https://www.feasterworks.com/" target="_blank">Feaster</a>, a digital marketing platform in the
         restaurant industry that provides customers with personalized, preference-based offers on local food and drink
