--- a/design/content/laudem.html
+++ b/design/content/laudem.html
@@ -35,10 +35,17 @@
 </head>
 
 <body>
-  <div class="container">
-      <a href="../design.html"class="close lavender" style="color:white">
+  <div class="header">
+      <div class="header-continer">
+        <a href="../index.html"><div class="navIcon"> <img src="../../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+      </div>
+      <a href="../design.html"class="close secClose" style="color:#dab">
           <i class="fa fa-close close-icon"></i>
       </a>
+  </div>
+
+  <div class="container">
+
       <h1 class="section-title"> Laud'Em</h1>
       <h4 class="section-subtitle sub"> Laud'Em is an app with the purpose of spreading social altruism in
         everyday settings and environments. I designed the user interface of the app, as well as all
