--- a/design/design.html
+++ b/design/design.html
@@ -39,10 +39,11 @@
 <body>
 
 <div class="box">
+  <a href="../index.html"><div class="navIconCover"><img src="../partials/images/logo-white.png" style="height:50%;width:auto"> </div></a>
   <div class="close lavender navClose" style="color:white">
       <i class="fa fa-close close-icon"></i>
   </div>
-  <a href="../design/design.html"><div class="navCoverItem"  style="margin-top:80px"> Design </div></a>
+  <a href="../design/design.html"><div class="navCoverItem"  style="margin-top:60px"> Design </div></a>
   <a href="../code/code.html"><div class="navCoverItem"> Code </div></a>
   <a href="../prototyping/prototyping.html"><div class="navCoverItem"> Prototyping </div>
   <a href="../about/about.html"><div class="navCoverItem"> About </div>
@@ -131,12 +132,12 @@
               <img src="../partials/images/design/chbrand.png">
           </div>
         </a>
-        <a href="content/sushi.html" class="transition">
+        <a href="content/160.html" class="transition">
           <div class="preview" style="background-color:#F59398">
               <div class="preview-layover">
                   BUSY BEARS
               </div>
-              <img src="../partials/images/design/layout.png">
+              <img src="../partials/images/design/layout-min.png">
           </div>
         </a>
         <a href="content/calhacks.html" class="transition">
