--- a/prototyping/content/pond.html
+++ b/prototyping/content/pond.html
@@ -34,10 +34,16 @@
 
 </head>
 
-<div class="container">
-    <a href="../prototyping.html"class="close lavender" style="color:white">
+<div class="header">
+    <div class="header-continer">
+      <a href="../index.html"><div class="navIcon"> <img src="../../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+    </div>
+    <a href="../prototyping.html"class="close secClose" style="color:#dab">
         <i class="fa fa-close close-icon"></i>
     </a>
+</div>
+
+<div class="container">
     <h1 class="section-title"> Pond in Geared Motion </h1>
     <h4 class="section-subtitle sub"> This project was a study of gears, motion, and the intersection of mechanics with aesthetics. I thought it would be an interesting juxtaposition
       to mesh the inherently mechanical nature of geared motion with the far less industrial image of floating lily pads over a pond
