added puritan google ref

--- a/armenian/armenian.html
+++ b/armenian/armenian.html
@@ -4,6 +4,8 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+      href="https://fonts.googleapis.com/css?family=Puritan">
 </head>
 
 <body>
