add faq content

--- a/cal-hacks/index.html
+++ b/cal-hacks/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Cal Hacks 5.0</title>
-  <meta name="description" content="It's time for round 5.0. The world's largest collegiate hackaton is back for its fifth anniversary!">
+  <meta name="description" content="It's time for round 5.0. The world's largest collegiate hackathon is back for its fifth anniversary!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.ico" type="image/x-icon"/>
   <link rel='stylesheet' href='./assets/style.css'>
@@ -228,47 +228,106 @@
     <div class='section' id='faq' data-aos='fade-up'>
       <h2> FAQ </h2>
       <div class='faq-content'>
-        <div class='column'>
+        <div class='column left'>
 
           <div class='faq-item'>
             <div class='question'>
-              Lorem ipsum dolor sit amet.
+              What is a hackathon?
             </div>
             <div class='answer'>
-              Integer commodo commodo est, ac congue nunc luctus vel. In hac habitasse platea dictumst. Pellentesque eget nunc elementum, mollis neque eu, dapibus lorem. Donec viverra facilisis neque, eu scelerisque leo blandit sit amet. Cras sed nibh et nulla ultricies fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+              A hackathon is where you can transform crazy ideas into reality. Join us at Cal Hacks this year alongside the 1,700 other hackers from all over the globe to share, inspire, teach, and most importantly build.
             </div>
           </div>
 
           <div class='faq-item'>
             <div class='question'>
-              Donec feugiat lacus ut nibh porttitor, quis porttitor dolor aliquam. Sed at leo eget massa porttitor eleifend.
+              Who can attend?
             </div>
             <div class='answer'>
-              Maecenas varius dignissim nulla, quis pharetra urna fermentum nec. Praesent maximus ex ac ultricies consectetur. Vestibulum porta, quam in faucibus consectetur, nibh nisl fermentum ex, nec dapibus ante tellus eget tortor. Nulla facilisi. Fusce commodo pharetra ex, a dapibus libero tristique quis.
+              Cal Hacks applications are open to all high school and college (both undergrad and grad) students over the age of 18.
+            </div>
+          </div>
+
+          <div class='faq-item'>
+            <div class='question'>
+              What if I don’t know how to code?
+            </div>
+            <div class='answer'>
+              Cal Hacks is the perfect place to learn! At Cal Hacks, we believe that some of the next great ideas will come from the fresh and diverse minds of individuals who innovate new solutions to hidden problems — we’re inviting you to come create with us. CubStart is a pre-hackathon beginning hacker program to help hackathons less intimidating and more accessible for everyone! We provide a mentorship program for team building, ideation, basic hackathon skills, and technical workshops to encourage those with little or no CS experience to try out hackathons and coding!
+              <br/><br/>
+              This program includes pre-hackathon workshops to help you gear up and learn all the skills you’ll need to build something you’re proud of as well as continuous individualized mentorship throughout the hackathon.
+            </div>
+          </div>
+
+          <div class='faq-item'>
+            <div class='question'>
+              How do teams work?
+            </div>
+            <div class='answer'>
+              Teams can be up to 4 people large. To apply as part of a team, the application will allow you to generate a team code. Make sure everyone applying as part of your team submits this team code in their application. If you don’t have a team prior to Cal Hacks, don’t worry because we’ll host team matching sessions! You may also compete solo but that will be soo much less fun.
             </div>
           </div>
 
         </div>
 
-        <div class='column'>
+        <div class='column right'>
 
           <div class='faq-item'>
             <div class='question'>
-              Lorem ipsum dolor sit amet.
+              How much will this cost?
             </div>
             <div class='answer'>
-              Integer commodo commodo est, ac congue nunc luctus vel. In hac habitasse platea dictumst. Pellentesque eget nunc elementum, mollis neque eu, dapibus lorem. Donec viverra facilisis neque, eu scelerisque leo blandit sit amet. Cras sed nibh et nulla ultricies fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+              Cal Hacks is free for all accepted hackers. We will be providing meals, caffeine, workspace, swag, and WiFi for the weekend. Travel reimbursements or bussing will be available for qualifying hackers. All you have to do is come ready to make!
             </div>
           </div>
 
           <div class='faq-item'>
             <div class='question'>
-              Donec feugiat lacus ut nibh porttitor, quis porttitor dolor aliquam. Sed at leo eget massa porttitor eleifend.
+              What should I bring?
             </div>
             <div class='answer'>
-              Maecenas varius dignissim nulla, quis pharetra urna fermentum nec. Praesent maximus ex ac ultricies consectetur. Vestibulum porta, quam in faucibus consectetur, nibh nisl fermentum ex, nec dapibus ante tellus eget tortor. Nulla facilisi. Fusce commodo pharetra ex, a dapibus libero tristique quis.
+              All you need is a valid student ID, a laptop, and chargers. A change of clothes and a pillow and/or sleeping bag is recommended.
             </div>
           </div>
+
+          <div class='faq-item'>
+            <div class='question'>
+              What is the schedule of the event?
+            </div>
+            <div class='answer'>
+              The Cal Hacks 5.0 schedule will be released closer to the event but plan on arriving at the event on the evening of Friday, November 2nd and leaving in the afternoon of Sunday, November 4th.
+            </div>
+          </div>
+
+          <div class='faq-item'>
+            <div class='question'>
+              What can my team build?
+            </div>
+            <div class='answer'>
+              Anything your heart desires! Any hardware, software, or tech-related thing you and your team can come up with! Projects will be judged on creativity, technical difficulty, polish, and usefulness.
+            </div>
+          </div>
+
+          <div class='faq-item'>
+            <div class='question'>
+              What if I want to work on my hack after the hackathon is over?
+            </div>
+            <div class='answer'>
+              Cal Hacks started The Cal Hacks Fellowship, a program that hosts several hackathon teams after the hackathon to continue building their projects to whatever stages they want to take it to next.
+              <br/><br/>
+              We offer many things like one-on-one mentorship, direct interactions with industry professionals and venture capitalists, office space at The SkyDeck and the House, equity-free funding, and access to future hack nights. We recommend all hackers to apply to our program to take their projects to the next level!
+            </div>
+          </div>
+
+          <div class='faq-item'>
+            <div class='question'>
+              What is the Cal Hacks code of conduct?
+            </div>
+            <div class='answer'>
+              Please see the <a href='#inclusion'> Inclusion </a> section above for detailed code of conduct.
+            </div>
+          </div>
+
 
         </div>
 
