footer and other tweaks

--- a/cal-hacks/index.html
+++ b/cal-hacks/index.html
@@ -334,7 +334,20 @@
       </div>
     </div>
 
+    <div class='footer'>
+      <a target='_blank' href='htpps://calhacks.io' class='home'><img src='./assets/images/hackanile.png'></a>
+      <div class='links'>
+        <a target='_blank' href='team@calhacks.io' class='link-item'><img src='./assets/images/icons/email.png'/></a>
+        <a target='_blank' href='https://www.facebook.com/CalHacks' class='link-item'><img src='./assets/images/icons/facebook.png'/></a>
+        <a target='_blank' href='https://github.com/calhacks' class='link-item'><img src='./assets/images/icons/github.png'/></a>
+        <a target='_blank' href='https://www.instagram.com/calhacks/' class='link-item'><img src='./assets/images/icons/instagram.png'/></a>
+        <a target='_blank' href='https://twitter.com/calhacks' class='link-item'><img src='./assets/images/icons/twitter.png'/></a>
+      </div>
+    </div>
+
   </div>
+
+
 
 </body>
 </html>
