code of conduct

--- a/cal-hacks/index.html
+++ b/cal-hacks/index.html
@@ -108,7 +108,7 @@
         At Cal Hacks, it is a crucial aspect of our mission to embrace and promote inclusivity, accessibility, & ethicality.
         All participants are expected to respect both our and MLH's Code of Conduct in order to facilitate a positive hackathon experience!
       </p>
-      <a target='_blank' class='conduct'> Cal Hacks Code of Conduct </a>
+      <a target='_blank' href='./code-of-conduct/index.html' class='conduct'> Cal Hacks Code of Conduct </a>
       <a href='https://static.mlh.io/docs/mlh-code-of-conduct.pdf' target='_blank' class='conduct'> MLH Code of Conduct </a>
     </div>
 
@@ -335,7 +335,7 @@
     </div>
 
     <div class='footer'>
-      <a target='_blank' href='htpps://calhacks.io' class='home'><img src='./assets/images/hackanile.png'></a>
+      <a target='_blank' href='https://calhacks.io' class='home'><img src='./assets/images/hackanile.png'></a>
       <div class='links'>
         <a target='_blank' href='team@calhacks.io' class='link-item'><img src='./assets/images/icons/email.png'/></a>
         <a target='_blank' href='https://www.facebook.com/CalHacks' class='link-item'><img src='./assets/images/icons/facebook.png'/></a>
