--- a/cal-hacks/index.html
+++ b/cal-hacks/index.html
@@ -172,7 +172,7 @@
     </div>
 
     <!-- Sponsor. -->
-    <div class='section' id='sponsor' data-aos='fade-up'>
+    <div class='section' id='sponsor' >
       <h2> Sponsor </h2>
       <p>
         Each year, our sponsors help us unite thousands of attendees from dozens of universities across the globe — bringing together the world's brightest collegiate hackers for 36 hours straight.
@@ -337,7 +337,7 @@
     <div class='footer'>
       <a target='_blank' href='https://calhacks.io' class='home'><img src='./assets/images/hackanile.png'></a>
       <div class='links'>
-        <a target='_blank' href='team@calhacks.io' class='link-item'><img src='./assets/images/icons/email.png'/></a>
+        <a target='_blank' href='mailto:team@calhacks.io' class='link-item'><img src='./assets/images/icons/email.png'/></a>
         <a target='_blank' href='https://www.facebook.com/CalHacks' class='link-item'><img src='./assets/images/icons/facebook.png'/></a>
         <a target='_blank' href='https://github.com/calhacks' class='link-item'><img src='./assets/images/icons/github.png'/></a>
         <a target='_blank' href='https://www.instagram.com/calhacks/' class='link-item'><img src='./assets/images/icons/instagram.png'/></a>
