faq styling, remove aos on sections, fix anchor link animation

--- a/cal-hacks/index.html
+++ b/cal-hacks/index.html
@@ -19,10 +19,10 @@
   <script>
   $(function() {
     AOS.init({
-      offset: 200,
-      duration: 800,
+      offset: 0,
+      duration: 600,
       easing: 'ease-in-sine',
-      delay: 0,
+      delay: 0
     });
   });
   </script>
@@ -35,7 +35,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Navigation bar. -->
-  <div class='header' data-aos='fade-down' data-aos-duration=600 data-aos-delay=0>
+  <div class='header' data-aos='fade-down' data-aos-duration=400 data-aos-delay=0>
 
     <div class='header-container'>
       <a href='#home' class='home'><img src='./assets/images/home_1.png'><img id='text' src='./assets/images/home_2.png'></a>
@@ -80,8 +80,8 @@
         <h2 class='sub'> November 2-4, 2018 <br/> California Memorial Stadium </h2>
         <div class='apply'> Apply now </div>
       </div>
-      <div class='ddoski' data-aos='fade-up-left' data-aos-duration=700><img src='./assets/images/ddoski.png'/></div>
-      <div class='node node-1' data-aos='fade-up-right' data-aos-delay=100><img src='./assets/images/nodes/node-1.svg'/></div>
+      <div class='ddoski' data-aos='fade-up-left' data-aos-duration=500><img src='./assets/images/ddoski.png'/></div>
+      <div class='node node-1' data-aos='fade-up-right' data-aos-delay=50><img src='./assets/images/nodes/node-1.svg'/></div>
       <div class='node node-2' data-aos='fade-up-left' data-aos-delay=0><img src='./assets/images/nodes/node-2.svg'/></div>
     </div>
 
@@ -96,13 +96,13 @@
         For Cal Hacks 5.0, we’re building on our tradition of technical & inclusive excellence by bringing together the world’s brightest collegiate hackers and guiding them in creating impactful, diverse, & innovative projects.
       </p>
       <div class='node node-3' data-aos='fade-up'><img src='./assets/images/nodes/node-3.svg'/></div>
-      <div class='node node-4' data-aos='fade-up' data-aos-delay=200><img src='./assets/images/nodes/node-4.svg'/></div>
+      <div class='node node-4' data-aos='fade-up' data-aos-delay=100><img src='./assets/images/nodes/node-4.svg'/></div>
     </div>
 
     <div class='small-buffer'></div>
 
     <!-- Inclusion, for code of conduct information. -->
-    <div class='section' id='inclusion' data-aos='fade-up'>
+    <div class='section' id='inclusion' >
       <h2> Inclusion </h2>
       <p>
         At Cal Hacks, it is a crucial aspect of our mission to embrace and promote inclusivity, accessibility, & ethicality.
@@ -113,7 +113,7 @@
     </div>
 
     <!-- Speakers. -->
-    <div class='section hidden' id='speakers' data-aos='fade-up'>
+    <div class='section hidden' id='speakers' >
       <h2> Speakers </h2>
       <p>
         Leaders, mentors, sponsors, and other infulential members of the tech community come to Cal Hacks to interact and inspire. Stay tuned for this year’s speakers and judges!
@@ -166,7 +166,7 @@
       </div>
     </div>
 
-    <div class='large-buffer'>
+    <div class='small-buffer'>
       <div class='node node-5' data-aos='fade-up'><img src='./assets/images/nodes/node-5.svg'/></div>
       <div class='node node-6' data-aos='fade-up'><img src='./assets/images/nodes/node-6.svg'/></div>
     </div>
@@ -179,8 +179,10 @@
         <br/><br/>
         Sponsoring Cal Hacks connects you with a diverse group of students that aim to innovate. Our hackers have shipped their Cal Hacks projects to thousands of people, founded YC startups, and conducted groundbreaking research. Join us in facilitating a new culture of doing and creating.
         <br/><br/>
-        Thank you so much for your interest in helping us fuel the future of tech. Please feel free to reach out to us via email and leave your email below to receive updates!
-        <br/><br/>
+        Thank you so much for your interest in helping us fuel the future of tech. Please feel free to reach out to us via email to receive updates!
+      </p>
+      <a class='conduct sponsor' target='_blank' href='mailto:team@calhacks.io'>Partner with Cal Hacks</a>
+      <p>
         Below are a handful of past sponsors that have been an integral part of our journey!
       </p>
       <div class='logo-grid'>
@@ -223,9 +225,9 @@
       </div>
     </div>
 
-    <div class='buffer'></div>
+    <div class='small-buffer'></div>
 
-    <div class='section' id='faq' data-aos='fade-up'>
+    <div class='section' id='faq' >
       <h2> FAQ </h2>
       <div class='faq-content'>
         <div class='column left'>
@@ -253,7 +255,7 @@
               What if I don’t know how to code?
             </div>
             <div class='answer'>
-              Cal Hacks is the perfect place to learn! At Cal Hacks, we believe that some of the next great ideas will come from the fresh and diverse minds of individuals who innovate new solutions to hidden problems — we’re inviting you to come create with us. CubStart is a pre-hackathon beginning hacker program to help hackathons less intimidating and more accessible for everyone! We provide a mentorship program for team building, ideation, basic hackathon skills, and technical workshops to encourage those with little or no CS experience to try out hackathons and coding!
+              Cal Hacks is the perfect place to learn! At Cal Hacks, we believe that some of the next great ideas will come from the fresh and diverse minds of individuals who innovate new solutions to hidden problems — we’re inviting you to come create with us. CubStart is a pre-hackathon beginning hacker program to help hackathons be less intimidating and more accessible for everyone! We provide a mentorship program for team building, ideation, basic hackathon skills, and technical workshops to encourage those with little or no CS experience to try out hackathons and coding!
               <br/><br/>
               This program includes pre-hackathon workshops to help you gear up and learn all the skills you’ll need to build something you’re proud of as well as continuous individualized mentorship throughout the hackathon.
             </div>
